--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">1718017</string>
+    <string name="settings">Settings</string>
+    <string name="Setting_locale" />
 </resources>
